--- a/wp-content/themes/maching/style.css
+++ b/wp-content/themes/maching/style.css
@@ -2073,19 +2073,19 @@ li.l_claim a span { font-size:20px; }
 }
 .c_guide_step_frame li:nth-child(1){
 	height:355px;
-	background:url('./../img/guide_step1.png') center center no-repeat;
+	background:url(img/guide_step1.png) center center no-repeat;
 }
 .c_guide_step_frame li:nth-child(2){
 	height:337px;
-	background:url('./../img/guide_step2.png') center center no-repeat;
+	background:url(img/guide_step2.png) center center no-repeat;
 }
 .c_guide_step_frame li:nth-child(3){
 	height:400px;
-	background:url('./../img/guide_step3.png') center center no-repeat;
+	background:url(img/guide_step3.png) center center no-repeat;
 }
 .c_guide_step_frame li:nth-child(4){
 	height:335px;
-	background:url('./../img/guide_step4.png') center center no-repeat;
+	background:url(img/guide_step4.png) center center no-repeat;
 }
 
 .c_second_opinion_step_frame li:nth-child(1){
